# mg

./: .gitignore  .mgignore  Cargo.toml  README.md  todo
src/: chenge.rs  collect.rs  compress.rs  get_ignore.rs  init.rs  labels.rs  list.rs  main.rs  paths.rs  recovery_label.rs  remove.rs  remove_all.rs  reset.rs  restore.rs  spinner.rs  unpack.rs  uuid.rs
