[package]
name = "mg"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.35", features = ["derive"] }
dirs-next = "2.0.0"
indicatif = "0.17.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
uuid = { version = "1.16.0", features = ["v5"] }
zstd = "0.13.3"
